# litemqtt

./: CMakeLists.txt  LICENSE  README.md  README.zh.md  build.sh
port/Linux/: port_base.c  port_tcp_ssl.c
port/mbedtls-v2.28/include/mbedtls/: config.h
src/: MQTTConnect.h  MQTTConnectClient.c  MQTTDeserializePublish.c  MQTTPacket.c  MQTTPacket.h  MQTTPublish.h  MQTTSerializePublish.c  MQTTSubscribe.h  MQTTSubscribeClient.c  MQTTUnsubscribe.h  MQTTUnsubscribeClient.c  cQueue.c  cQueue.h  mqtt_client.c  mqtt_client.h  mqtt_client_config.h  mqtt_client_err_code.h  mqtt_client_private.h  port.h  uthash.h  utils_net.c  utils_net.h  utils_timer.c  utils_timer.h
test/: demo_mqtt_client.c
